--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
@@ -265,6 +265,15 @@
     <Filter Include="sonia.bang\entities\ellipsis">
       <UniqueIdentifier>{c7793df5-9618-486e-8a33-49b10971c99a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sonia.bang\entities\compare">
+      <UniqueIdentifier>{d915d722-0322-4d4f-8238-06e1998bb35b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.bang\entities\functions">
+      <UniqueIdentifier>{8614d0a0-74fa-441c-8923-33d6f9047e45}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.bang\semantic">
+      <UniqueIdentifier>{36002c3c-a2c5-46bc-89ee-6bd2432dc2e0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\sonia\shared_ptr.hpp">
@@ -2223,6 +2232,21 @@
     <ClInclude Include="..\..\..\sonia\bang\entities\external_function_entity.hpp">
       <Filter>sonia.bang\entities</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\compare\compare_patterns.hpp">
+      <Filter>sonia.bang\entities\compare</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\functions\basic_fn_pattern.hpp">
+      <Filter>sonia.bang\entities\functions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\functions\function_entity.hpp">
+      <Filter>sonia.bang\entities\functions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\functions\external_fn_pattern.hpp">
+      <Filter>sonia.bang\entities\functions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\semantic\expression_printer.hpp">
+      <Filter>sonia.bang\semantic</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\sonia\logger\logger.cpp">
@@ -2575,6 +2599,21 @@
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\bang\ast\preliminary_type_visitor.cpp">
       <Filter>sonia.bang\ast</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\compare\compare_patterns.cpp">
+      <Filter>sonia.bang\entities\compare</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\functions\basic_fn_pattern.cpp">
+      <Filter>sonia.bang\entities\functions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\functions\function_entity.cpp">
+      <Filter>sonia.bang\entities\functions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\functions\external_fn_pattern.cpp">
+      <Filter>sonia.bang\entities\functions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\semantic\semantic_expression_printer.cpp">
+      <Filter>sonia.bang\semantic</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
